cros: Pagination buttons no longer change pages while folder is open.

Bug: 883163
Change-Id: I49b5c18601bb53f3f199aff9363d84a0ae1f7dc7
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1644597
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Matthew Mourgos <mmourgos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#667247}

Former-commit-id: 5d79548af29bf77b7eceb28dea36b1ef9eced82a